src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_date__c</fullName>
        <label>Accepted date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Sent_Date__c</fullName>
        <label>Application Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applied_Via__c</fullName>
        <description>Please select the agency where the application has been submitted</description>
        <label>Applied Via</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campus Direct</fullName>
                    <default>true</default>
                    <label>Campus Direct</label>
                </value>
                <value>
                    <fullName>OEC</fullName>
                </value>
                <value>
                    <fullName>SIUK</fullName>
                </value>
                <value>
                    <fullName>Admissions Overseas</fullName>
                </value>
                <value>
                    <fullName>Gateway Abroad</fullName>
                </value>
                <value>
                    <fullName>Emergence</fullName>
                </value>
                <value>
                    <fullName>Education First</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleared_or_Rejected__c</fullName>
        <formula>TEXT( Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cleared or Rejected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Type_F__c</fullName>
        <formula>TEXT (Preferred_University__r.Currency_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Type__c</fullName>
        <label>Currency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFN</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>ANG</fullName>
                </value>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>AWG</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BBD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BIF</fullName>
                </value>
                <value>
                    <fullName>BMD</fullName>
                </value>
                <value>
                    <fullName>BND</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
                <value>
                    <fullName>BWP</fullName>
                </value>
                <value>
                    <fullName>BYN</fullName>
                </value>
                <value>
                    <fullName>BZD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CDF</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Course_fees_Annual__c</fullName>
        <label>Course Fees (Annual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Further_Document_submitted_date__c</fullName>
        <label>Further Document submitted date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Health_Cover_Type__c</fullName>
        <formula>TEXT(Student__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Cover Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Pre_Paid_Tuition_Fee__c</fullName>
        <label>Initial Pre-Paid Tuition Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution_Name__c</fullName>
        <label>Campus Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intake_Month__c</fullName>
        <formula>CASE(MONTH( Program_Start_date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;,  
4, &quot;April&quot;,  
5, &quot;May&quot;,  
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;,
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intake Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Year__c</fullName>
        <formula>Text(YEAR( Program_Start_date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intake Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Conditions_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditions met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_amount_to_pay__c</fullName>
        <label>Minimum amount to pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_offer__c</fullName>
        <label>Offer Number</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Package_Offer__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offer 01</fullName>
                </value>
                <value>
                    <fullName>Offer 02</fullName>
                </value>
                <value>
                    <fullName>Offer 03</fullName>
                </value>
                <value>
                    <fullName>Offer 04</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Conditions__c</fullName>
        <label>Offer Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <label>Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unconditional</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orientation_date__c</fullName>
        <label>Orientation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Pre_Paid_Non_Tuition_Fee__c</fullName>
        <label>Other Pre-Paid Non-Tuition Fee:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Offer__c</fullName>
        <label>Package Offer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_University__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Offer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Student of the offers are not matched</errorMessage>
            <filterItems>
                <field>$Source.Student__c</field>
                <operation>equals</operation>
                <valueField>Application__c.Student__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Start_date__c</fullName>
        <label>Program Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_end_date__c</fullName>
        <label>Program end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <label>Scholarship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shared_with_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared with</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shared_with__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared with</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Prior_Value__c</fullName>
        <label>Status Prior Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Documents Received</fullName>
                </value>
                <value>
                    <fullName>Application Submitted</fullName>
                </value>
                <value>
                    <fullName>Further Information Requested</fullName>
                </value>
                <value>
                    <fullName>Offer Received</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Offer Accepted</fullName>
                </value>
                <value>
                    <fullName>Offer Rejected</fullName>
                </value>
                <value>
                    <fullName>Withdrawn by student</fullName>
                </value>
                <value>
                    <fullName>Payment Made</fullName>
                </value>
                <value>
                    <fullName>COE/CAS Received</fullName>
                </value>
                <value>
                    <fullName>COE/CAS Rejected</fullName>
                </value>
                <value>
                    <fullName>Visa Applied</fullName>
                </value>
                <value>
                    <fullName>Visa Granted</fullName>
                </value>
                <value>
                    <fullName>Visa Rejected</fullName>
                </value>
                <value>
                    <fullName>Visa Withdraw</fullName>
                </value>
                <value>
                    <fullName>Withdrawn by the University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Email_Address__c</fullName>
        <description>It Stores the Student Email Value</description>
        <label>Student Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <label>Student ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount_paid__c</fullName>
        <label>Course Fees Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tuition_Fee__c</fullName>
        <label>Course Fees (Annual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>University_in_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Application_Handled_by__c</fullName>
        <label>Visa Application Handled by</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Applied_Date__c</fullName>
        <label>Visa Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visa_Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Cleared</label>
        <type>Checkbox</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Student__c</columns>
        <columns>Preferred_University__c</columns>
        <columns>Status__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Accepted_date__c</columns>
        <columns>Full_Course_fees_Annual__c</columns>
        <columns>Intake_Year__c</columns>
        <columns>Intake_Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>admissions</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Australia_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Australia Colombo</label>
        <queue>Australia_Colombo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Australia_Kandy_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Australia Kandy</label>
        <queue>Australia_Kandy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ayanthi_s_Prospective_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Ayanthi&apos;s Prospective</label>
        <queue>Ayanthi_s_Prospective</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada Colombo</label>
        <queue>Canada_Colombo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_Kandy_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Canada Kandy</label>
        <queue>Canada_Kandy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>England_Application</fullName>
        <columns>NAME</columns>
        <columns>Intake_Year__c</columns>
        <columns>Intake_Month__c</columns>
        <columns>Offer_Conditions__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Preferred_University__c</columns>
        <columns>Program_Start_date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Devin</value>
        </filters>
        <label>Applications Devin</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fariha_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Fariha</label>
        <queue>Fariha</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Queue_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>General Queue</label>
        <queue>General_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Germany_Colombo_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Germany Colombo</label>
        <queue>Germany_Colombo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Germany_Kandy_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Germany Kandy</label>
        <queue>Germany_Kandy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Grenada_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Grenada</label>
        <queue>Grenada</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Malaysia_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Malaysia</label>
        <queue>Malaysia</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Applications</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Course_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Preferred_University__c</columns>
        <columns>Program_Start_date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Applications</label>
    </listViews>
    <listViews>
        <fullName>NZ_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>NZ</label>
        <queue>NZ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CDUK/APP{000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>COE_request_should_be_sent_after_complet</fullName>
        <active>true</active>
        <description>COE request should be sent after completing the offer conditions.
Validation: If (Offer Type == conditional  &amp;&amp; IsConditionMet = true || Offer Type == Unconditional) then allow update to Status = Payment Made
Consider: DoPaymentAfterVisa field == true</description>
        <errorConditionFormula>AND (
     ISPICKVAL(Status__c,&quot;Payment Made&quot;),
     Preferred_University__r.DoPaymentAfterVisa__c == True,
        NOT(
           OR(
	      AND(
                  ISPICKVAL(Offer_Type__c,&quot;Conditional&quot;)
                  ,Is_Conditions_Met__c = True
              ),
	      AND(
                 ISPICKVAL(Offer_Type__c,&quot;Unconditional&quot;)
                ,Is_Conditions_Met__c = False
	      )
	   )    
       )
)</errorConditionFormula>
        <errorMessage>Status Can&apos;t be Updated to &apos;Payment Made&apos; until the Conditions are Met.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offer_condition</fullName>
        <active>true</active>
        <description>Based on Offer Type Offer Conditions should be displayed</description>
        <errorConditionFormula>AND(
    ISPICKVAL( Offer_Type__c ,&apos;Conditional&apos;),
    ISBLANK( Offer_Conditions__c )
)</errorConditionFormula>
        <errorDisplayField>Offer_Conditions__c</errorDisplayField>
        <errorMessage>Offer Conditions are not Visible</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_End_Date_GreatProgram_Start_Date</fullName>
        <active>true</active>
        <description>Program End Date Should be Greater than Program Start Date</description>
        <errorConditionFormula>Program_Start_date__c &gt;  Program_end_date__c</errorConditionFormula>
        <errorDisplayField>Program_end_date__c</errorDisplayField>
        <errorMessage>Program End Date Should be Greater than Program Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_fields_for_Offer_Recieved</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL( Status__c ,&quot;Offer Received&quot;), 
ISPICKVAL( Status__c ,&quot;Payment Made&quot;), 
ISPICKVAL( Status__c ,&quot;COE/CAS Received&quot;), 
ISPICKVAL( Status__c ,&quot;COE/CAS Rejected&quot;), 
ISPICKVAL( Status__c ,&quot;Visa Applied&quot;), 
ISPICKVAL( Status__c ,&quot;Visa Granted&quot;), 
ISPICKVAL( Status__c ,&quot;Visa Rejected&quot;), 
ISPICKVAL( Status__c ,&quot;Visa Withdraw&quot;) 
), 
OR( 
ISBLANK( Student_ID__c ), 
ISBLANK( Program_Start_date__c ), 
ISBLANK( Program_end_date__c ), 
ISBLANK( Full_Course_fees_Annual__c ), 
ISBLANK( Course_Name__c), 
ISBLANK(TEXT( Offer_Type__c )) 
) 
)</errorConditionFormula>
        <errorMessage>Please check the Required Fields Filled or not [ Student Id,Program Start Date,Program End Date,Full Course Fees,Course Name,Offer Type ]</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Previous_Offer_on_Offer_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND (IsPickVal( Next_offer__c  , &quot;Offer 01&quot;) ,  Previous_Offer__c !=null)</errorConditionFormula>
        <errorDisplayField>Previous_Offer__c</errorDisplayField>
        <errorMessage>Offer 1 cannot have a previous Offer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Previous_Offer_on_Package_offer</fullName>
        <active>true</active>
        <errorConditionFormula>AND (IsPickVal(Package_Offer__c , &quot;No&quot;) ,  Previous_Offer__c !=null)</errorConditionFormula>
        <errorDisplayField>Previous_Offer__c</errorDisplayField>
        <errorMessage>Non-Package offer cannot have a previous Offer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>visa_granted_Applied_AcceptedDate_Manda</fullName>
        <active>true</active>
        <description>Accepted Date is Mandatory</description>
        <errorConditionFormula>AND( 
CASE(
        Status__c ,
        &quot;Visa Granted&quot;, 1,
        &quot;Visa Applied&quot;, 1,
        0
    ) = 1,
OR(
ISBLANK( Accepted_date__c)
))</errorConditionFormula>
        <errorDisplayField>Accepted_date__c</errorDisplayField>
        <errorMessage>Required Field is Missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>visa_granted_Applied_InitialFeeMandatory</fullName>
        <active>false</active>
        <description>Initial Pre-Paid Tution Fee is Mandatory</description>
        <errorConditionFormula>AND( 
CASE(
        Status__c ,
        &quot;Visa Granted&quot;, 1,
        &quot;Visa Applied&quot;, 1,
        0
    ) = 1,
OR( 
ISBLANK( Initial_Pre_Paid_Tuition_Fee__c )
))</errorConditionFormula>
        <errorDisplayField>Initial_Pre_Paid_Tuition_Fee__c</errorDisplayField>
        <errorMessage>Required Field is Missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>visa_granted_Applied_OrientationMadatory</fullName>
        <active>false</active>
        <description>Orientation Date is Mandatory</description>
        <errorConditionFormula>AND( 
CASE(
        Status__c ,
        &quot;Visa Granted&quot;, 1,
        &quot;Visa Applied&quot;, 1,
        0
    ) = 1,
OR( 
ISNULL( Orientation_date__c )
))</errorConditionFormula>
        <errorDisplayField>Orientation_date__c</errorDisplayField>
        <errorMessage>Required Field is Missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>visa_granted_Applied_OtherFee_Mandatory</fullName>
        <active>false</active>
        <description>Other Pre-Paid Non Tuition Fee is Mandatory</description>
        <errorConditionFormula>AND( 
CASE(
        Status__c ,
        &quot;Visa Granted&quot;, 1,
        &quot;Visa Applied&quot;, 1,
        0
    ) = 1,
OR(
ISBLANK( Other_Pre_Paid_Non_Tuition_Fee__c )
))</errorConditionFormula>
        <errorDisplayField>Other_Pre_Paid_Non_Tuition_Fee__c</errorDisplayField>
        <errorMessage>Required Field is Missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>visa_granted_Applied_totalAmount_Mandato</fullName>
        <active>true</active>
        <description>Total Amount Paid Should not be Empty</description>
        <errorConditionFormula>AND( 
CASE(
        Status__c ,
        &quot;Visa Granted&quot;, 1,
        &quot;Visa Applied&quot;, 1,
        0
    ) = 1,
OR( 
ISBLANK( Total_Amount_paid__c)
))</errorConditionFormula>
        <errorDisplayField>Total_Amount_paid__c</errorDisplayField>
        <errorMessage>Required Field is Missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>visa_granted_Applied_totalTuition</fullName>
        <active>true</active>
        <description>Total Tuition Fee is Mandatory</description>
        <errorConditionFormula>AND( 
CASE(
        Status__c ,
        &quot;Visa Granted&quot;, 1,
        &quot;Visa Applied&quot;, 1,
        0
    ) = 1,
OR( 
ISBLANK( Total_Tuition_Fee__c )))</errorConditionFormula>
        <errorDisplayField>Total_Tuition_Fee__c</errorDisplayField>
        <errorMessage>Required Field is Missing</errorMessage>
    </validationRules>
</CustomObject>